log-examples/compile
"ninja" -j 1000 -l 12 -k 1 -C ./out/Debug browser_tests
ninja: Entering directory `./out/Debug'
[1/5459] ACTION //third_party/blink/renderer/bindings/scripts:cached_jinja_templates(//build/toolchain/linux:clang_x64)
[2/5459] STAMP obj/third_party/blink/renderer/bindings/scripts/cached_jinja_templates.stamp
[3/5459] ACTION //third_party/blink/renderer/bindings/modules/v8:generate_bindings_modules_v8_partial_interfaces_for_testing(//build/toolchain/linux:clang_x64)
[4/5455] ACTION //third_party/blink/renderer/bindings/core/v8:bindings_core_impl_generated(//build/toolchain/linux:clang_x64)
[5/5027] ACTION //third_party/blink/renderer/bindings/modules/v8:bindings_modules_impl_generated(//build/toolchain/linux:clang_x64)
[6/4664] ACTION //third_party/blink/renderer/bindings/modules/v8:generate_bindings_modules_v8_partial_interfaces(//build/toolchain/linux:clang_x64)
[7/4663] ACTION //third_party/blink/renderer/bindings/modules/v8:generate_v8_context_snapshot_external_references(//build/toolchain/linux:clang_x64)
[8/4662] ACTION //third_party/blink/renderer/bindings/core/v8:generate_bindings_core_v8_interfaces(//build/toolchain/linux:clang_x64)
[9/2056] ACTION //third_party/blink/renderer/bindings/modules/v8:generate_bindings_modules_v8_interfaces(//build/toolchain/linux:clang_x64)
[10/116] CXX obj/third_party/blink/renderer/core/frame/frame/dom_window.o
FAILED: obj/third_party/blink/renderer/core/frame/frame/dom_window.o 
../../third_party/blink/renderer/core/frame/dom_window.cc:448:60: error: member reference type 'blink::LocalFrame *' is a pointer; did you mean to use '->'?
  LOG(ERROR) << __func__ << " top = " << source->GetFrame().Top();
                                         ~~~~~~~~~~~~~~~~~~^
                                                           ->
../../third_party/blink/renderer/core/frame/dom_window.cc:448:61: error: no member named 'Top' in 'blink::LocalFrame'
  LOG(ERROR) << __func__ << " top = " << source->GetFrame().Top();
                                         ~~~~~~~~~~~~~~~~~~ ^
../../third_party/blink/renderer/core/frame/dom_window.cc:450:55: error: member reference type 'blink::LocalFrame *' is a pointer; did you mean to use '->'?
             << " top window = " << source->GetFrame().Top()->DomWindow();
                                    ~~~~~~~~~~~~~~~~~~^
                                                      ->
../../third_party/blink/renderer/core/frame/dom_window.cc:450:56: error: no member named 'Top' in 'blink::LocalFrame'
             << " top window = " << source->GetFrame().Top()->DomWindow();
                                    ~~~~~~~~~~~~~~~~~~ ^
4 errors generated.
